--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ResumeDeft</title>
+  <title>BadgeYay</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
@@ -15,5 +15,10 @@
 	<script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
   <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/script.js') }}"></script>
+
+  <div class="footer">
+    <strong>Version:</strong>
+    <a class="version"></a>
+  </div>
 </body>
 </html>
