--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,8 @@
 			    <div class="form-group">
 					<label for="inputFile">Upload a CSV file to generate badges</label>
 					<input type="file" id="inputFile" name="file">
+					<label for="imageFile">[Optional] Upload a PNG file for badge background</label>
+					<input type="file" id="imageFile" name="image">
 					<button type="submit" class="btn btn-danger pull-right">Upload</button>
 				</div>
 		    </form>
