Textarea to enter csv data

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -110,6 +110,9 @@
 .custom-icon img {
   width: 60%;
 }
+textarea {
+  resize: vertical;
+}
 .footer {
   position: absolute;
   text-align: center;
