allows downloading of badges in zipped, pdf and svg versions

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,10 +6,16 @@
 			{% with m = get_flashed_messages(with_categories=true) %}
 				{% if m %}
 					{% for cat,msg in m %}
-						<div class="flash-{{cat}}">{{msg}}</div>
+						<div class="flash-{{cat}}">Your badges has been successfully generated.</div>
 						{% if cat == 'success' %}
 							<div class="text-center">
-							    <a href="static/uploads/all-badges.pdf" class="btn btn-lg btn-success" download="download">Download as PDF</a>
+							    <a href="static/uploads/all-badges.zip" class="btn btn-lg btn-success" download="download">Download as ZIP</a>
+                            </div>
+                            <div class="text-center">
+							    <a href="static/uploads/{{msg}}.badges.pdf" class="btn btn-lg btn-success" download="download">Download as PDF</a>
+                            </div>
+                            <div class="text-center">
+							    <a href="static/uploads/{{msg}}.badges.svg.zip" class="btn btn-lg btn-success" download="download">Download as ZIP of SVGs</a>
 							</div>
 					    {% endif %}
 					{% endfor %}
@@ -28,6 +34,6 @@
 				</div>
 		    </form>
 		</div>
-    </div>	
+    </div>
 </div>
 {% endblock %}
