--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,18 +5,20 @@
 		<div class="col-md-4 col-md-offset-4">
 			{% with m = get_flashed_messages(with_categories=true) %}
 				{% if m %}
-					{% for cat,msg in m %}
-						<div class="flash-{{cat}}">Your badges has been successfully generated.</div>
-						{% if cat == 'success' %}
-							<div class="text-center">
-							    <a href="static/uploads/all-badges.zip" class="btn btn-lg btn-success" download="download">Download as ZIP</a>
+                    {% for cat,msg in m %}
+                        {% if cat == 'success' %}
+                            <div class="flash-{{cat}}">Your badges has been successfully generated.</div>
+                            <div class="text-center">
+                                <a href="static/uploads/all-badges.zip" class="btn btn-lg btn-success" download="download">Download as ZIP</a>
                             </div>
                             <div class="text-center">
-							    <a href="static/uploads/{{msg}}.badges.pdf" class="btn btn-lg btn-success" download="download">Download as PDF</a>
+                                <a href="static/uploads/{{msg}}.badges.pdf" class="btn btn-lg btn-success" download="download">Download as PDF</a>
                             </div>
                             <div class="text-center">
-							    <a href="static/uploads/{{msg}}.badges.svg.zip" class="btn btn-lg btn-success" download="download">Download as ZIP of SVGs</a>
-							</div>
+                                <a href="static/uploads/{{msg}}.badges.svg.zip" class="btn btn-lg btn-success" download="download">Download as ZIP of SVGs</a>
+                            </div>
+                        {% else %}
+                            <div class="flash-{{cat}}">{{msg}}</div>
 					    {% endif %}
 					{% endfor %}
 				{% endif %}
