--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,7 @@
 .board .col-md-4 {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   margin-top: 40px;
+  margin-bottom: 50px;
   padding-bottom: 20px;
 }
 .board .btn-success {
@@ -118,7 +119,7 @@ textarea {
   text-align: center;
   width: 100%;
   padding: 10px;
-  bottom: 0px;
+  bottom: -50px;
   border-top: 1px solid #bfbfbf;
   background-color: #f9f9f9;
 }
