--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,6 +26,8 @@
 					<div class="text-center">OR</div>
 					<label for="textArea">Enter data manually</label>
 					<textarea class="form-control" id="textArea" name="csv"></textarea>
+					<label for="textArea1">Enter Eventyay URL and Type</label>
+					<textarea class="form-control" id="textArea1" name="eventyay_url"></textarea>
 					<label for="imageFile">[Optional] Upload a PNG file for badge background</label>
 					<input type="file" id="imageFile" name="image">
 					<label for="inputFile">[Optional] Upload a config(json) file to customise badges</label>
