--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,8 +26,8 @@
 					<div class="text-center">OR</div>
 					<label for="textArea">Enter data manually</label>
 					<textarea class="form-control" id="textArea" name="csv"></textarea>
-					<label for="textArea1">Enter Eventyay URL and Type</label>
-					<textarea class="form-control" id="textArea1" name="eventyay_url"></textarea>
+					<label for="textField">Enter Eventyay URL and Type</label>
+					<input type="text" class="form-control" id="textField" name="eventyay_url">
 					<label for="imageFile">[Optional] Upload a PNG file for badge background</label>
 					<input type="file" id="imageFile" name="image">
 					<div class="text-center">OR</div>
