--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,25 +13,23 @@
 	                            <a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
 	                            <a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
 	                        </div>
-	                    {% endif %}
 
-	                    {% if cat == 'success-pdf' %}
+	                    {% elif cat == 'success-pdf' %}
 	                    	<div class="text-center">
 		                    	<div class="flash-{{cat}}">Your badges has been successfully generated.</div>
 		                    	<a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
 	                    	</div>
-	                    {% endif %}
 
-	                    {% if cat == 'success-zip' %}
+	                    {% elif cat == 'success-zip' %}
 	                    	<div class="text-center">
 		                    	<div class="flash-{{cat}}">Your badges has been successfully generated.</div>
 		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
 		                    	<a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
 	                    	</div>
-	                    {% endif %}
 
                         {% else %}
                             <div class="flash-{{cat}}">{{msg}}</div>
+                		{% endif %}
 					{% endfor %}
 				{% endif %}
 			{% endwith %}
