Make it compulsary to select download type

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,7 +40,7 @@
 			    	    <label for="zip">Zip</label>
 			    	    <input type="checkbox" id="zip" name="zip">
     			    	<label for="pdf">PDF</label>
-	    		    	<input type="checkbox" id="pdf" name="pdf">
+	    		    	<input type="checkbox" id="pdf" name="pdf" checked="checked">
                     </span>
 					<label for="inputFile">Upload a CSV file to generate badges</label>
 					<input type="file" id="inputFile" name="file">
