Remove overlapping of footer

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -15,10 +15,11 @@
 	<script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
   <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/script.js') }}"></script>
-
-  <div class="footer">
-    <strong>Version:</strong>
-    <a class="version"></a>
+  <div id="footer" class="navbar-static-bottom">
+    <center>
+      <strong>Version:</strong>
+      <a class="version"></a>
+    </center>
   </div>
 </body>
 </html>
