--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 				{% if m %}
                     {% for cat,msg in m %}
                         {% if cat == 'success' %}
-                            <div class="flash-success">Your badges has been successfully generated.</div>
+                            <div class="flash-{{cat}}">Your badges has been successfully generated.</div>
                             <div class="text-center">
 	                            <a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
 	                            <a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
@@ -16,13 +16,13 @@
 
 	                    {% elif cat == 'success-pdf' %}
 	                    	<div class="text-center">
-		                    	<div class="flash-success">Your badges has been successfully generated.</div>
+		                    	<div class="flash-{{cat}}">Your badges has been successfully generated.</div>
 		                    	<a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
 	                    	</div>
 
 	                    {% elif cat == 'success-zip' %}
 	                    	<div class="text-center">
-		                    	<div class="flash-success">Your badges has been successfully generated.</div>
+		                    	<div class="flash-{{cat}}">Your badges has been successfully generated.</div>
 		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
 		                    	<a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
 	                    	</div>
@@ -71,9 +71,10 @@
 					<input type="hidden" name="img-default" value="">
 
 					<label for="inputFile">[Optional] Upload a config(json) file to customise badges</label>
+
 					<input type="file" id="inputFile" name="config">
 
-					<button type="submit" class="btn btn-danger pull-right">Upload</button>
+					<div class="text-center"><button type="submit" class="btn btn-danger">Upload</button></div>
 				</div>
 		    </form>
 		</div>
