--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,61 +1,71 @@
 {% extends "layout.html" %}
 {% block body %}
-<div class="container board">
+<div class="container">
 	<div class="row">
-		<div class="col-md-4 col-md-offset-4">
+		<div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 jumbotron">
 			{% with m = get_flashed_messages(with_categories=true) %}
 				{% if m %}
                     {% for cat,msg in m %}
                         {% if cat == 'success' %}
-                            <div class="flash-{{cat}}">Your badges has been successfully generated.</div>
+                            <div class="flash-success">Your badges has been successfully generated.</div>
                             <div class="text-center">
 	                            <a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
 	                            <a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
 	                            <a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
 	                        </div>
-	                    {% endif %}
 
-	                    {% if cat == 'success-pdf' %}
+	                    {% elif cat == 'success-pdf' %}
 	                    	<div class="text-center">
-		                    	<div class="flash-{{cat}}">Your badges has been successfully generated.</div>
+		                    	<div class="flash-success">Your badges has been successfully generated.</div>
 		                    	<a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
 	                    	</div>
-	                    {% endif %}
 
-	                    {% if cat == 'success-zip' %}
+	                    {% elif cat == 'success-zip' %}
 	                    	<div class="text-center">
-		                    	<div class="flash-{{cat}}">Your badges has been successfully generated.</div>
+		                    	<div class="flash-success">Your badges has been successfully generated.</div>
 		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
 		                    	<a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
 	                    	</div>
-	                    {% endif %}
 
                         {% else %}
                             <div class="flash-{{cat}}">{{msg}}</div>
+                		{% endif %}
 					{% endfor %}
 				{% endif %}
 			{% endwith %}
 			<form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
-			    <div class="form-group">
-                    <span class="options">
-			    	    <label>Tick the download type(s):</label>
-			    	    <label for="zip">Zip</label>
-			    	    <input type="checkbox" id="zip" name="zip">
-    			    	<label for="pdf">PDF</label>
-	    		    	<input type="checkbox" id="pdf" name="pdf">
-                    </span>
-					<label for="inputFile">Upload a CSV file to generate badges</label>
-					<input type="file" id="inputFile" name="file">
-					<div class="text-center">OR</div>
-					<label for="textArea">Enter data manually</label>
+				<label>Tick the download type(s):</label>
+				<div class="checkbox">
+			    	<label for="zip">
+			      		<input type="checkbox" id="zip" name="zip">Zip
+			      	</label>
+			    </div>
+			    <div class="checkbox">
+			      	<label for="pdf">
+			      		<input type="checkbox" id="pdf" name="pdf">PDF
+			      	</label>
+			  	</div>
+			  	<div class="form-group">
+			  		<label for="inputFile">Upload a CSV file to generate badges</label>
+			  		<input type="file" id="inputFile" name="file">
+			  	</div>
+			  	<div class="text-center"><strong>OR</strong></div>
+			  	<div class="form-group">
+			  		<label for="textArea">Enter data manually</label>
 					<textarea class="form-control" id="textArea" name="csv"></textarea>
-					<label for="textField">Enter Eventyay URL and Type</label>
+			  	</div>
+			  	<div class="form-group">
+			  		<label for="textField">Enter Eventyay URL and Type</label>
 					<input type="text" class="form-control" id="textField" name="eventyay_url">
-					<label for="imageFile">[Optional] Upload a PNG file for badge background</label>
+			  	</div>
+			  	<div class="form-group">
+			  		<label for="imageFile"><span class="label label-info">OPTIONAL</span> Upload a PNG file for badge background</label>
 					<input type="file" id="imageFile" name="image">
-					<div class="text-center">OR</div>
-					<label for="inputFile">[Optional] Select one from here</label>
-					<div class="btn-group">
+			  	</div>
+			  	<div class="text-center"><strong>OR</strong></div>
+			  	<div class="form-group">
+			  		<label for="inputFile"><span class="label label-info">OPTIONAL</span> Select one from here</label>
+			  		<div class="btn-group">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							<span class="placeholder">
 								Select a background
@@ -71,14 +81,14 @@
 						</ul>
 					</div>
 					<input type="hidden" name="img-default" value="">
-
-					<label for="inputFile">[Optional] Upload a config(json) file to customise badges</label>
+			  	</div>
+			  	<div class="form-group">
+			  		<label for="inputFile"><span class="label label-info">OPTIONAL</span> Upload a config file (JSON) to customise badges</label>
 					<input type="file" id="inputFile" name="config">
-
-					<button type="submit" class="btn btn-danger pull-right">Upload</button>
-				</div>
-		    </form>
+			  	</div>
+			  	<button type="submit" class="btn btn-primary" style="width: 100%;">Upload</button>
+			</form>
 		</div>
-    </div>
+	</div>
 </div>
 {% endblock %}
