--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 				{% if m %}
                     {% for cat,msg in m %}
                         {% if cat == 'success' %}
-                            <div class="flash-success">Your badges has been successfully generated.</div>
+                            <div class="flash-success">Your badges has been successfully generated!</div>
                             <div class="text-center">
 	                            <a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
 	                            <a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
@@ -16,13 +16,13 @@
 
 	                    {% elif cat == 'success-pdf' %}
 	                    	<div class="text-center">
-		                    	<div class="flash-success">Your badges has been successfully generated.</div>
+		                    	<div class="flash-success">Your badges has been successfully generated!</div>
 		                    	<a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
 	                    	</div>
 
 	                    {% elif cat == 'success-zip' %}
 	                    	<div class="text-center">
-		                    	<div class="flash-success">Your badges has been successfully generated.</div>
+		                    	<div class="flash-success">Your badges has been successfully generated!</div>
 		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
 		                    	<a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
 	                    	</div>
@@ -42,7 +42,7 @@
 			    </div>
 			    <div class="checkbox">
 			      	<label for="pdf">
-			      		<input type="checkbox" id="pdf" name="pdf">PDF
+			      		<input type="checkbox" id="pdf" name="pdf" checked="checked">PDF
 			      	</label>
 			  	</div>
 			  	<div class="form-group">
@@ -67,7 +67,10 @@
 			  	</div>
 			  	<div class="text-center"><strong>OR</strong></div>
 			  	<div class="form-group">
-			  		<label for="inputFile"><span class="label label-info">OPTIONAL</span> Select one from here</label>
+			  		<label for="inputFile">
+			  			<span class="label label-info">OPTIONAL</span>
+			  			Select one from here
+			  		</label>
 			  		<div class="btn-group">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							<span class="placeholder">
