--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {% block body %}
-<div class="container">
+<div class="container board">
 	<div class="row">
-		<div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 jumbotron">
+		<div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 			{% with m = get_flashed_messages(with_categories=true) %}
 				{% if m %}
                     {% for cat,msg in m %}
                         {% if cat == 'success' %}
-                            <div class="flash-success">Your badges has been successfully generated.</div>
+                            <div class="flash-success">Your badges has been successfully generated!</div>
                             <div class="text-center">
 	                            <a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
 	                            <a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
@@ -16,13 +16,13 @@
 
 	                    {% elif cat == 'success-pdf' %}
 	                    	<div class="text-center">
-		                    	<div class="flash-success">Your badges has been successfully generated.</div>
+		                    	<div class="flash-success">Your badges has been successfully generated!</div>
 		                    	<a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
 	                    	</div>
 
 	                    {% elif cat == 'success-zip' %}
 	                    	<div class="text-center">
-		                    	<div class="flash-success">Your badges has been successfully generated.</div>
+		                    	<div class="flash-success">Your badges has been successfully generated!</div>
 		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
 		                    	<a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
 	                    	</div>
@@ -37,12 +37,12 @@
 				<label>Tick the download type(s):</label>
 				<div class="checkbox">
 			    	<label for="zip">
-			      		<input type="checkbox" id="zip" name="zip">Zip
+			      		<input type="checkbox" id="zip" name="zip">ZIP
 			      	</label>
 			    </div>
 			    <div class="checkbox">
 			      	<label for="pdf">
-			      		<input type="checkbox" id="pdf" name="pdf">PDF
+			      		<input type="checkbox" id="pdf" name="pdf" checked="checked">PDF
 			      	</label>
 			  	</div>
 			  	<div class="form-group">
@@ -59,12 +59,18 @@
 					<input type="text" class="form-control" id="textField" name="eventyay_url">
 			  	</div>
 			  	<div class="form-group">
-			  		<label for="imageFile"><span class="label label-info">OPTIONAL</span> Upload a PNG file for badge background</label>
+			  		<label for="imageFile">
+			  			<span class="label label-info">OPTIONAL</span>
+			  			Upload a PNG file for badge background
+			  		</label>
 					<input type="file" id="imageFile" name="image">
 			  	</div>
 			  	<div class="text-center"><strong>OR</strong></div>
 			  	<div class="form-group">
-			  		<label for="inputFile"><span class="label label-info">OPTIONAL</span> Select one from here</label>
+			  		<label for="inputFile">
+			  			<span class="label label-info">OPTIONAL</span>
+			  			Select one from here
+			  		</label>
 			  		<div class="btn-group">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							<span class="placeholder">
@@ -83,10 +89,13 @@
 					<input type="hidden" name="img-default" value="">
 			  	</div>
 			  	<div class="form-group">
-			  		<label for="inputFile"><span class="label label-info">OPTIONAL</span> Upload a config file (JSON) to customise badges</label>
+			  		<label for="inputFile">
+			  			<span class="label label-info">OPTIONAL</span>
+			  			Upload a config file (JSON) to customise badges
+			  		</label>
 					<input type="file" id="inputFile" name="config">
 			  	</div>
-			  	<button type="submit" class="btn btn-primary" style="width: 100%;">Upload</button>
+			  	<button type="submit" class="btn btn-primary">Upload</button>
 			</form>
 		</div>
 	</div>
