Added Guidelines for User
Added guidelines for user for entering data.
The Link to the '/guide' appears only if wrong data is entered with an error.

Closes https://github.com/fossasia/badgeyay/issues/82

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,6 +29,7 @@
 
                         {% else %}
                             <div class="flash-{{cat}}">{{msg}}</div>
+                            <div class="text-center"><p>Read Guide <a href="/guide" target="_blank">here</a></p></div>
                 		{% endif %}
 					{% endfor %}
 				{% endif %}
