--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,9 @@
 
                         {% else %}
                             <div class="flash-{{cat}}">{{msg}}</div>
-                            <div class="text-center"><p>Read Guide <a href="/guide" target="_blank">here</a></p></div>
+                            <div class="text-center guide">
+								Check out our <a href="/guide" target="_blank">User Input Guide</a>
+                            </div>
                 		{% endif %}
 					{% endfor %}
 				{% endif %}
