--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,22 +9,22 @@
                         {% if cat == 'success' %}
                             <div class="flash-success">Your badges has been successfully generated!</div>
                             <div class="text-center">
-	                            <a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
-	                            <a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
-	                            <a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
+	                            <a href="static/badges/all-badges.zip" class="btn btn-success" download="all-badges.zip">Download as ZIP</a>
+	                            <a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="{{msg}}.badges.pdf">Download as PDF</a>
+	                            <a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="{{msg}}.badges.svg.zip">Download as ZIP of SVGs</a>
 	                        </div>
 
 	                    {% elif cat == 'success-pdf' %}
 	                    	<div class="text-center">
 		                    	<div class="flash-success">Your badges has been successfully generated!</div>
-		                    	<a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
+		                    	<a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="{{msg}}.badges.pdf">Download as PDF</a>
 	                    	</div>
 
 	                    {% elif cat == 'success-zip' %}
 	                    	<div class="text-center">
 		                    	<div class="flash-success">Your badges has been successfully generated!</div>
-		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
-		                    	<a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
+		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="all-badges.zip">Download as ZIP</a>
+		                    	<a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="{{msg}}.badges.svg.zip">Download as ZIP of SVGs</a>
 	                    	</div>
 
                         {% else %}
