--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -88,6 +88,8 @@
 							</li>
 							{% endfor %}
 						</ul>
+						<input id="cp1" type="text" class="form-control" placeholder="Enter Color HEX if user_defined" name="bg_color"/>
+						<input id="image_text" type="text" class="form-control" placeholder="Enter Text if user_defined" name="text_on_image"/>
 					</div>
 					<input type="hidden" name="img-default" value="">
 			  	</div>
