Color Picker integration for HEX color value for Background.
Added jQuery MiniColors Color Picker which gives options to the
user to choose from several colors.

Fixes: https://github.com/fossasia/badgeyay/issues/200

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -48,6 +48,9 @@
 .form-group label {
   margin-top: 20px;
 }
+.well {
+  margin-top: 40px;
+}
 .navbar .glyphicon-th {
   font-size: 30px;
   margin-top: 20px;
