--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -6,7 +6,9 @@
   <title>BadgeYay</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.minicolors.css') }}">
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  
   {% block style %}{% endblock %}
 </head>
 <body>
@@ -14,7 +16,8 @@
 	{% block body %}{% endblock %}
 	<script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
   <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/jquery.minicolors.min.js') }}"></script>
 
   <div class="footer">
     <strong>Version:</strong>
