Integrate colorpicker widget

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -88,8 +88,9 @@
 							</li>
 							{% endfor %}
 						</ul>
+			
 						</div>
-						<input id="cp1" type="text" class="form-control" placeholder="Enter Color HEX if user_defined" name="bg_color"/>
+						<input id="cp1" type="text" class="form-control jscolor" placeholder="Enter Color HEX if user_defined" name="bg_color"/>
 						<input id="image_text" type="text" class="form-control" placeholder="Enter Text if user_defined" name="text_on_image"/>
 					
 					<input type="hidden" name="img-default" value="">
