--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,6 +14,7 @@
 	{% block body %}{% endblock %}
 	<script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
   <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/jscolor.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
   <div class="footer">
