New message for the combined commit

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,22 +9,22 @@
                         {% if cat == 'success' %}
                             <div class="flash-success">Your badges has been successfully generated!</div>
                             <div class="text-center">
-	                            <a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
-	                            <a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
-	                            <a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
+	                            <a href="static/badges/all-badges.zip" class="btn btn-success" download="all-badges.zip">Download as ZIP</a>
+	                            <a href="static/badges/{{msg}}-badges.pdf" class="btn btn-success" download="{{msg}}.badges.pdf">Download as PDF</a>
+	                            <a href="static/badges/{{msg}}-badges-svg.zip" class="btn btn-success" download="{{msg}}.badges.svg.zip">Download as ZIP of SVGs</a>
 	                        </div>
 
 	                    {% elif cat == 'success-pdf' %}
 	                    	<div class="text-center">
 		                    	<div class="flash-success">Your badges has been successfully generated!</div>
-		                    	<a href="static/badges/{{msg}}.badges.pdf" class="btn btn-success" download="download">Download as PDF</a>
+		                    	<a href="static/badges/{{msg}}-badges.pdf" class="btn btn-success" download="{{msg}}.badges.pdf">Download as PDF</a>
 	                    	</div>
 
 	                    {% elif cat == 'success-zip' %}
 	                    	<div class="text-center">
 		                    	<div class="flash-success">Your badges has been successfully generated!</div>
-		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="download">Download as ZIP</a>
-		                    	<a href="static/badges/{{msg}}.badges.svg.zip" class="btn btn-success" download="download">Download as ZIP of SVGs</a>
+		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="all-badges.zip">Download as ZIP</a>
+		                    	<a href="static/badges/{{msg}}-badges-svg.zip" class="btn btn-success" download="{{msg}}.badges.svg.zip">Download as ZIP of SVGs</a>
 	                    	</div>
 
                         {% else %}
@@ -63,7 +63,6 @@
 			  	</div>
 			  	<div class="form-group">
 			  		<label for="imageFile">
-			  			<span class="label label-info">OPTIONAL</span>
 			  			Upload a PNG file for badge background
 			  		</label>
 					<input type="file" id="imageFile" name="image">
@@ -71,7 +70,6 @@
 			  	<div class="text-center"><strong>OR</strong></div>
 			  	<div class="form-group">
 			  		<label for="inputFile">
-			  			<span class="label label-info">OPTIONAL</span>
 			  			Select one from here
 			  		</label>
 			  		<div class="btn-group">
@@ -88,7 +86,23 @@
 							</li>
 							{% endfor %}
 						</ul>
-					</div>
+						<div class="well">
+							<div class="row">
+							 <div class="col-md-3">
+								  <div class="form-group">
+										<input type="text" id="color_picker" class="form-control" data-inline="true" value="#4fc8db" name="bg_color">
+								  </div>
+								  <div id="inlinecolorhex">
+								  <span class="float-right">
+									  <h3><small>#4fc8db</small></h3>
+								  </span>
+								  </div>
+							  </div>
+						  </div>	  
+					  	</div>
+						</div>
+						<input id="image_text" type="text" class="form-control" placeholder="Enter Text if user_defined" name="text_on_image"/>
+					
 					<input type="hidden" name="img-default" value="">
 			  	</div>
 			  	<div class="form-group">
