Modified upload button with an upload fa icon (#231)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -104,7 +104,7 @@
 			  		</label>
 					<input type="file" id="inputFile" name="config">
 			  	</div>
-			  	<button type="submit" class="btn btn-primary">Upload</button>
+				<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-upload"></span>  Upload</button>
 			</form>
 		</div>
 	</div>
