Add 'Enter custom text for badges' in index.html. This sends the 'text_on_image' argument in POST request.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -87,6 +87,10 @@
 							{% endfor %}
 						</ul>
 					</div>
+					<label for="inputFile">
+			  			Enter custom text for badges
+			  		</label>
+					<input id="image_text" type="text" class="form-control" placeholder="The text entered here will appear on badges" name="text_on_image"/>
 					<input type="hidden" name="img-default" value="">
 				</div>
 				<div class="text-center"><strong>OR</strong></div>
