Fixes#283 UI changes

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -16,7 +16,9 @@
 	<script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
   <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
   <script src="{{ url_for('static', filename='js/jquery.minicolors.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/script.js') }}"></script>  
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/form.js') }}"></script>
+
   <div class="footer">
     <strong>Version:</strong>
     <a class="version"></a>
