--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,116 +1,111 @@
 {% extends "layout.html" %}
 {% block body %}
 <div class="container board">
-	<div class="row">
-		<div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+<div class="row">
+
 			{% with m = get_flashed_messages(with_categories=true) %}
 				{% if m %}
-                    {% for cat,msg in m %}
-                        {% if cat == 'success' %}
-                            <div class="flash-success">Your badges has been successfully generated!</div>
-                            <div class="text-center">
-	                            <a href="static/badges/all-badges.zip" class="btn btn-success" download="all-badges.zip">Download as ZIP</a>
-	                            <a href="static/badges/{{msg}}-badges.pdf" class="btn btn-success" download="{{msg}}.badges.pdf">Download as PDF</a>
-	                            <a href="static/badges/{{msg}}-badges-svg.zip" class="btn btn-success" download="{{msg}}.badges.svg.zip">Download as ZIP of SVGs</a>
-	                        </div>
-
-	                    {% elif cat == 'success-pdf' %}
-	                    	<div class="text-center">
+          {% for cat,msg in m %}
+                      {% if cat == 'success-pdf' %}
 		                    	<div class="flash-success">Your badges has been successfully generated!</div>
+		                    	<div class="text-center">
 		                    	<a href="static/badges/{{msg}}-badges.pdf" class="btn btn-success" download="{{msg}}.badges.pdf">Download as PDF</a>
-	                    	</div>
-
-	                    {% elif cat == 'success-zip' %}
-	                    	<div class="text-center">
-		                    	<div class="flash-success">Your badges has been successfully generated!</div>
-		                    	<a href="static/badges/all-badges.zip" class="btn btn-success" download="all-badges.zip">Download as ZIP</a>
-		                    	<a href="static/badges/{{msg}}-badges-svg.zip" class="btn btn-success" download="{{msg}}.badges.svg.zip">Download as ZIP of SVGs</a>
-	                    	</div>
-
+	                    		</div>
                         {% else %}
-                            <div class="flash-{{cat}}">{{msg}}</div>
-                		{% endif %}
+                          <div class="flash-{{cat}}">{{msg}}</div>
+                		  {% endif %}
 					{% endfor %}
 				{% endif %}
 			{% endwith %}
-			<form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
-				<label>Tick the download type(s):</label>
-				<div class="checkbox">
-			    	<label for="zip">
-			      		<input type="checkbox" id="zip" name="zip">ZIP
-			      	</label>
-			    </div>
-			    <div class="checkbox">
-			      	<label for="pdf">
-			      		<input type="checkbox" id="pdf" name="pdf" checked="checked">PDF
-			      	</label>
-			  	</div>
-			  	<div class="form-group">
-			  		<label for="inputFile">Upload a CSV file to generate badges</label>
-			  		<input type="file" id="inputFile" name="file">
-			  	</div>
-			  	<div class="text-center"><strong>OR</strong></div>
-			  	<div class="form-group">
-			  		<label for="textArea">Enter data manually</label>
-					<textarea class="form-control" id="textArea" name="csv"></textarea>
-			  	</div>
-			  	<div class="form-group">
-						<div class="text-center guide">
-                 Check out our <a href="/guide" target="_blank">User Input Guide</a>
-						</div>
-			  		<label for="textField">Enter Eventyay URL and Type</label>
-					<input type="text" class="form-control" id="textField" name="eventyay_url">
-			  	</div>
-			  	<div class="form-group">
-			  		<label for="imageFile">
-			  			Upload a PNG file for badge background
-			  		</label>
-					<input type="file" id="imageFile" name="image">
-			  	</div>
-			  	<div class="text-center"><strong>OR</strong></div>
-			  	<div class="form-group">
-			  		<label for="inputFile">
-			  			Select from default images
-			  		</label>
-			  		<div class="btn-group">
-						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<span class="placeholder">
-								Select a background
-							</span>
-							<span class="glyphicon glyphicon-chevron-down"></span>
-						</button>
-						<ul class="dropdown-menu">
-							{% for i in default_background %}
-							<li class="menu-options" data-item="{{i}}">
-								<img src="static/uploads/{{i}}"> {{i}}
-							</li>
-							{% endfor %}
-						</ul>
-					</div>
-					<label for="inputFile">
-			  			Enter custom text for badges
-			  		</label>
-					<input id="image_text" type="text" class="form-control" placeholder="The text entered here will appear on badges" name="text_on_image"/>
-					<input type="hidden" name="img-default" value="">
-				</div>
-				<div class="text-center"><strong>OR</strong></div>
-				<div class="form-group">
-					<label for="inputFile">
-			  			Select a background color
-			  		</label>
-					<input type="text" id="picker" class="form-control" value="#4fc8db" name="bg_color">
-				</div>
+      <form  action="{{ url_for('upload') }}"  method="post" enctype="multipart/form-data" >
+  			 <div class="row">
+  			 <div class="container board">
+  			 <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 
-			  	<div class="form-group">
-			  		<label for="inputFile">
-			  			<span class="label label-info">OPTIONAL</span>
-			  			Upload a config file (JSON) to customise badges
-			  		</label>
-					<input type="file" id="inputFile" name="config">
-			  	</div>
-				<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-upload"></span>  Upload</button>
-			</form>
-		</div>
-	</div>
+  			  <label> User Input Guide</label>
+  			    <ul style="list-style-type:none">
+  			      <li>Check out our <a href="/guide" target="_blank">User Input Guide</a></li>
+  			    </ul>
+
+    		  <label>Choose your Data Source</label>
+      		  <ul style="list-style-type:none">
+
+        	   <li><input  name="datasource" type="radio" id="csvupload"> Add CSV file  </li>
+
+        		  <section id="csvupload-input" style="display: none;">
+          		<div class="form-group">
+          		<label for="inputFile">Add CSV file containing fields Name,Organization and Handle</label>
+          		<input type="file" id="inputFile" name="file" accept=".csv">
+          		</div>
+        		  </section>
+
+        	    <li><input name="datasource" type="radio" id="manualdata"> Enter Data Manually </li>
+
+        		  <section id="text-input" style="display: none;">
+          		<div class="form-group">
+          		<label for="textArea" >Enter One Name per Line </label>
+          		<textarea  class = "form-control" type = "text" placeholder="Eg. Hong Phuc,Dang,@hpdang,FOSSASIA "  id= "textArea" name="csv"></textarea>
+          		</div>
+        		  </section>
+
+      		  </ul>
+
+    		  <label>Choose your Badge Background</label>
+      		  <ul style="list-style-type:none">
+
+        	    <li><input type="radio" name="backsource" id="pngupload"> Add PNG file </li>
+
+          		<section id="upimage-input" style="display: none;">
+            	<label for="imageFile">Upload a PNG file for badge background</label>
+           		<input type="file" id="imageFile" name="image">
+          		</section>
+
+        	    <li><input type="radio" name="backsource" id="defimage"> Add Default Image </li>
+
+              <section id="deimage-input" style="display: none;">
+            	<label for="inputFile">Select from default images</label>
+            	<div class="btn-group"><button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="placeholder">Select a background</span> <span class="glyphicon glyphicon-chevron-down"></span></button>
+            	<ul class="dropdown-menu">{% for i in default_background %}
+            	<li class="menu-options" data-item="{{i}}"><img src="static/uploads/{{i}}"> {{i}}</li>{% endfor %}
+           		</ul>
+            	</div>
+          		</section>
+
+        	    <li><input type="radio" name="backsource" id="defback"> Add Background Color </li>
+
+              <section  id="background-input" style="display: none;">
+          		<label  for="inputFile">Select a background color</label>
+          		<div>
+          		<input type="text" id="picker" class="form-control" value="#4fc8db" name="bg_color" >
+          		</div>
+        		  </section>
+
+      		  </ul>
+
+    		  <label> Customise Badges (Optional)</label>
+    		    <ul style="list-style-type:none;">
+      		    <li><input type="radio" name="text" id="text"> Add Custom text </li>
+
+      			  <section id="cutext-input" style="display: none;">
+        		  <label for="inputFile"></label>
+        		  <input id="image_text" type="text" class="form-control" placeholder="The text entered here will appear on badges" name="text_on_image"/>
+        		  <input type="hidden" name="img-default" value="">
+      			  </section>
+
+      		    <li><input type="radio" name="text" id="json"> Add JSON file </li>
+      			  <section id="config-input" style="display: none;">
+        		  <label for="inputFile"> Upload a config file </label>
+        		  <input type="file" id="inputFile" name="config">
+      			  </section>
+
+    		    </ul>
+    		
+    		    <button  for="pdf" type="submit" name="pdf" value="pdf" class="btn btn-primary"> Generate Badges </button>
+
+    		</div>
+        </div>
+    		</div>
+  	</form>
+</div>
 </div>
 {% endblock %}
