--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BadgeYay</title>
+  <title>BadgeYay-dev</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">  
   <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.minicolors.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
