Corrected susi logo Fixes #321
Signed-off-by: yashLadha <201551061@iiitvadodara.ac.in>

--- a/app/templates/_header.html
+++ b/app/templates/_header.html
@@ -42,7 +42,7 @@
             </div>
             <div class="custom-menu-item">
               <a class="custom-icon" href="http://chat.susi.ai" target="_blank">
-                <img src="static/images/susi.jpg">
+                <img src="static/images/susi.png">
                 <p class="custom-title">Susi</p>
               </a>
             </div>
